Style alignment of results and fixed synonyms section

--- a/dictionary-project/src/index.css
+++ b/dictionary-project/src/index.css
@@ -23,8 +23,12 @@ h1 {
   font-size: 2.5rem;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-top: 0;
+  display: inline;
+}
+h3 {
+  font-size: 1.5rem;
 }
 @media (min-width: 500px) {
   h1 {
@@ -45,12 +49,13 @@ form {
 .search-input {
   width: 100%;
   max-width: 480px;
-  padding: 8px;
-  border: solid black 1px;
+  padding: 8px 35px 8px 12px;
+  border: solid rgb(109, 109, 109) 1px;
   border-radius: 30px;
 }
 .search-submit {
   position: absolute;
+  margin-top: 2px;
   right: 10px;
   padding: 8px;
   border: none;
@@ -74,6 +79,26 @@ form {
   color: black;
   margin: 0 10px;
 }
+.synonyms-list {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+li {
+  margin: 8px;
+  padding: 5px 12px;
+  border-radius: 20px;
+  background-color: rgb(236, 236, 236);
+  color: rgb(0, 0, 49);
+}
+
+b {
+  color: rgb(0, 0, 49);
+}
+.examples {
+  color: rgb(109, 109, 109);
+}
 
 /* Images */
 .image-container {
@@ -92,8 +117,9 @@ img {
   margin: 10px auto;
 }
 img:hover {
-  transition: all ease-in-out 350ms;
+  transition: all ease-in-out 400ms;
   transform: scale(1.05);
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
 }
 @media (min-width: 500px) {
   .image-container {
